[gd_scene load_steps=3 format=3 uid="uid://cekk84l5uuray"]

[ext_resource type="Script" uid="uid://dwlm7kflj1pc0" path="res://Scenes/Settings/settings.gd" id="1_10mxt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_10mxt"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.233925, 0.233925, 0.233925, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7
shadow_color = Color(0, 0, 0, 0.156863)
shadow_size = 35
shadow_offset = Vector2(0, 9)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_10mxt")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Panel"]
custom_minimum_size = Vector2(500, 250)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_10mxt")

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel/ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Panel/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Max FPS"

[node name="FPS_SpinBox" type="SpinBox" parent="Panel/Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "If set to 0, no FPS limit"
max_value = 360.0
rounded = true
alignment = 1
custom_arrow_step = 15.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/Panel/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "VSync"

[node name="OptionButton" type="OptionButton" parent="Panel/Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 13
selected = 1
item_count = 2
popup/item_0/text = "Enabled"
popup/item_0/id = 0
popup/item_1/text = "Disabled"
popup/item_1/id = 1

[node name="HSeparator" type="HSeparator" parent="Panel/Panel/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/Panel/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Display Mode"

[node name="OptionButton" type="OptionButton" parent="Panel/Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 13
disabled = true
selected = 0
item_count = 2
popup/item_0/text = "Dark Mode"
popup/item_0/id = 0
popup/item_1/text = "Light Mode"
popup/item_1/id = 1

[node name="HSeparator2" type="HSeparator" parent="Panel/Panel/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel/Panel/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Syntax File Location"

[node name="LineEdit" type="LineEdit" parent="Panel/Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
size_flags_horizontal = 10
placeholder_text = "./Syntax"

[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
[connection signal="value_changed" from="Panel/Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/FPS_SpinBox" to="." method="_on_fps_spin_box_value_changed"]
[connection signal="item_selected" from="Panel/Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/OptionButton" to="." method="_on_option_button_item_selected"]
